[package]
name = "yarm"
version = "0.3.0"
edition = "2024"
description = "A small workflow utility for managing local git repositories. It handles git identity configuration via profiles and keeps track of repositories across directory pools."
repository = "https://github.com/dmnq-f/yarm"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli", "profile", "repository", "identity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "examples/"]

[lints.clippy]
pedantic = "deny"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6"
console = "0.16.3"
dirs = "6.0.0"
indicatif = "0.18.4"
inquire = "0.9.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
bitcode = { version = "0.6", features = ["serde"] }
toml = "1.0"
globset = "0.4"
strsim = "0.11"

[profile.release]
lto = true
strip = true
codegen-units = 1
